tests/cases/compiler-development/artifact/errors/diagnostic-match-payload-required.diagnostic
diagnostic error code=T0001 family=type message="enum case 'Some' requires a payload pattern" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/match/errors/match-payload-required.ari" display="tests/cases/match/errors/match-payload-required.ari" bytes=177
  Label index=0 role=primary source_id=0 source="tests/cases/match/errors/match-payload-required.ari" line=9 column=5 end_line=9 end_column=9 byte_start=103 byte_end=107 message=""
  Snippet label=0 text="  --> tests/cases/match/errors/match-payload-required.ari:9:5\n   |\n 9 |     Some => {\n   |     ^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/match/errors/match-payload-required.ari" line=3 column=8 end_line=3 end_column=11 byte_start=32 byte_end=35 message="enum case 'Some' declares payload type i32"
  Snippet label=1 text="  --> tests/cases/match/errors/match-payload-required.ari:3:8\n   |\n 3 |   Some(i32),\n   |        ^^^"
  Note index=0 location=none message="match payload patterns must mirror enum case payload declarations"
  Help index=0 location=none message="add a payload pattern such as 'Some(_)'"
